feature_delivery_rate_card: adapter created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_rate_card.xml
@@ -121,6 +121,7 @@
             </RelativeLayout>
             
             <RelativeLayout
+                android:id="@+id/relativeLayoutFareRange"
                 android:layout_width="650px"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
@@ -135,6 +136,7 @@
                     android:background="@color/white_dark1"
                     android:orientation="horizontal">
                     <TextView
+                        android:id="@+id/textViewRangeText"
                         android:layout_width="0px"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
@@ -149,6 +151,7 @@
                         android:background="@color/darker_grey_v2"/>
 
                     <TextView
+                        android:id="@+id/textViewPerKmText"
                         android:layout_width="0px"
                         android:layout_weight="1"
                         android:layout_height="match_parent"
@@ -172,6 +175,7 @@
                     android:layout_below="@+id/linearLayoutHeading"
                     android:orientation="vertical">
                     <LinearLayout
+                        android:id="@+id/linearLayoutRange1"
                         android:layout_width="match_parent"
                         android:layout_height="0px"
                         android:layout_weight="1"
@@ -209,6 +213,7 @@
                         android:background="@color/darker_grey_v2"/>
 
                     <LinearLayout
+                        android:id="@+id/linearLayoutRange2"
                         android:layout_width="match_parent"
                         android:layout_height="0px"
                         android:layout_weight="1"
@@ -246,6 +251,7 @@
                         android:background="@color/darker_grey_v2"/>
 
                     <LinearLayout
+                        android:id="@+id/linearLayoutRange3"
                         android:layout_width="match_parent"
                         android:layout_height="0px"
                         android:layout_weight="1"
