--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -16,24 +16,16 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="100px"
-            android:background="@color/sliding_bottom_bg_color"
-            android:gravity="center">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="30px">
 
-            <!--<ImageView-->
-            <!--android:id="@+id/imageViewHorizontal3"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="2px"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:background="@color/black"/>-->
 
             <TextView
                 android:id="@+id/textViewBeforeRide"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:gravity="center"
                 android:padding="10px"
                 android:text="@string/before_ride"
                 android:textColor="@color/new_orange"
@@ -45,9 +37,10 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="180px"
+            android:layout_height="140px"
             android:layout_marginLeft="40px"
             android:layout_marginRight="40px"
+            android:layout_marginBottom="20px"
             android:gravity="center_vertical">
 
             <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
@@ -106,39 +99,30 @@
 
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="100px"
-            android:background="@color/sliding_bottom_bg_color"
-            android:gravity="center">
+        <ImageView
+        android:id="@+id/imageViewHorizontal3"
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:layout_centerVertical="true"
+        android:background="@color/darker_grey_v2"/>
 
-            <!--<ImageView-->
-            <!--android:id="@+id/imageViewHorizontal2"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="2px"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:background="@color/black"/>-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="350px"
+            android:layout_marginTop="30px"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/textViewInRide"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:gravity="center"
                 android:padding="10px"
+                android:layout_marginLeft="30px"
                 android:text="@string/in_ride_rate"
                 android:textColor="@color/new_orange"
-                android:textSize="40px"
-
-                />
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="270px"
-            android:orientation="vertical">
+                android:textSize="40px"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -149,9 +133,9 @@
                     android:id="@+id/textViewBaseFare"
                     android:layout_width="0px"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
+                    android:gravity="center_horizontal"
+                    android:layout_marginTop="17px"
                     android:layout_weight="1"
-                    android:gravity="center"
                     android:text="@string/base_fare"
                     android:textColor="@color/black"
                     android:textSize="34px"/>
@@ -292,46 +276,37 @@
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/relativeLayoutDriverReferralHeading"
-            android:layout_width="match_parent"
-            android:layout_height="100px"
-            android:background="@color/sliding_bottom_bg_color"
-            android:gravity="center">
+        <ImageView
+        android:id="@+id/imageViewHorizontal2"
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:layout_centerVertical="true"
+        android:background="@color/darker_grey_v2"/>
 
-            <!--<ImageView-->
-            <!--android:id="@+id/imageViewHorizontal1"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="2px"-->
-            <!--android:layout_centerVertical="true"-->
-            <!--android:background="@color/black"/>-->
+
+        <LinearLayout
+            android:id="@+id/linearLayoutDriverReferral"
+            android:layout_width="match_parent"
+            android:layout_height="330px"
+            android:orientation="vertical"
+            android:layout_marginTop="30px"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/textViewReferral"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:gravity="center"
                 android:padding="10px"
+                android:layout_marginLeft="30px"
                 android:text="@string/referral_rate"
                 android:textColor="@color/new_orange"
                 android:textSize="40px"
-                />
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/linearLayoutDriverReferral"
-            android:layout_width="match_parent"
-            android:layout_height="230px"
-            android:orientation="vertical"
-            android:visibility="visible">
-
+            />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="100px"
+                android:layout_height="90px"
                 android:orientation="horizontal">
 
                 <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
