--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -283,14 +283,12 @@
         android:layout_centerVertical="true"
         android:background="@color/darker_grey_v2"/>
 
-
-        <LinearLayout
-            android:id="@+id/linearLayoutDriverReferral"
+        <RelativeLayout
+            android:id="@+id/relativeLayoutDriverReferralHeading"
             android:layout_width="match_parent"
-            android:layout_height="330px"
-            android:orientation="vertical"
-            android:layout_marginTop="30px"
-            android:visibility="visible">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30px"
+            android:layout_marginTop="30px">
 
             <TextView
                 android:id="@+id/textViewReferral"
@@ -298,11 +296,20 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:padding="10px"
-                android:layout_marginLeft="30px"
                 android:text="@string/referral_rate"
                 android:textColor="@color/new_orange"
                 android:textSize="40px"
             />
+
+        </RelativeLayout>
+
+
+        <LinearLayout
+            android:id="@+id/linearLayoutDriverReferral"
+            android:layout_width="match_parent"
+            android:layout_height="330px"
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -383,9 +390,10 @@
         <RelativeLayout
             android:id="@+id/relativeLayoutDriverReferralSingle"
             android:layout_width="match_parent"
-            android:layout_height="180px"
-            android:layout_marginLeft="50px"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40px"
             android:layout_marginRight="50px"
+            android:layout_marginTop="20px"
             android:gravity="center_vertical"
             android:visibility="gone">
 
