--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_rate_card.xml
@@ -18,8 +18,8 @@
         android:background="@color/sliding_bottom_bg_color"
         android:padding="4px">
 
-
         <RelativeLayout
+            android:id="@+id/relativelayoutBaseFare"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -77,14 +77,16 @@
                 android:layout_marginRight="30px"
                 android:orientation="vertical" />
 
+            <ImageView
+                android:id="@+id/imageViewHorizontal3"
+                android:layout_width="match_parent"
+                android:layout_height="12px"
+                android:layout_below="@+id/basefare_extras"
+                android:layout_centerVertical="true"
+                android:background="@color/sliding_bottom_bg_color"/>
+
         </RelativeLayout>
 
-        <ImageView
-        android:id="@+id/imageViewHorizontal3"
-        android:layout_width="match_parent"
-        android:layout_height="12px"
-        android:layout_centerVertical="true"
-        android:background="@color/sliding_bottom_bg_color"/>
 
         <RelativeLayout
             android:id="@+id/relativeLayoutRange"
@@ -145,16 +147,19 @@
                 android:layout_marginRight="30px"
                 android:orientation="vertical" />
 
+            <ImageView
+                android:id="@+id/imageViewHorizontal2"
+                android:layout_width="match_parent"
+                android:layout_height="12px"
+                android:layout_below="@+id/perKm_extras"
+                android:layout_centerVertical="true"
+                android:background="@color/sliding_bottom_bg_color"/>
+
         </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/imageViewHorizontal2"
-            android:layout_width="match_parent"
-            android:layout_height="12px"
-            android:layout_centerVertical="true"
-            android:background="@color/sliding_bottom_bg_color"/>
 
         <RelativeLayout
+            android:id="@+id/relativelayoutPerDelivery"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
@@ -212,48 +217,252 @@
                 android:layout_marginRight="30px"
                 android:orientation="vertical" />
 
+            <ImageView
+                android:id="@+id/imageViewHorizontal1"
+                android:layout_width="match_parent"
+                android:layout_height="15px"
+                android:layout_below="@+id/perDelivery_extras"
+                android:layout_centerVertical="true"
+                android:background="@color/sliding_bottom_bg_color"/>
+
         </RelativeLayout>
 
-        <ImageView
-            android:id="@+id/imageViewHorizontal1"
+
+        <RelativeLayout
+            android:id="@+id/relativelayoutReturnFare"
             android:layout_width="match_parent"
-            android:layout_height="15px"
-            android:layout_centerVertical="true"
-            android:background="@color/sliding_bottom_bg_color"/>
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textViewReturnFare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8px"
+                android:layout_marginLeft="32px"
+                android:layout_marginTop="24px"
+                android:text="@string/return_fare"
+                android:textAllCaps="true"
+                android:textColor="@color/new_orange"
+                android:textSize="40px"/>
+
+            <LinearLayout
+                android:id="@+id/returnFare_extras"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewReturnFare"
+                android:layout_marginBottom="30px"
+                android:layout_marginTop="24px"
+                android:layout_marginLeft="30px"
+                android:layout_marginRight="30px"
+                android:orientation="vertical" />
+
+            <ImageView
+                android:id="@+id/imageViewHorizontal5"
+                android:layout_width="match_parent"
+                android:layout_height="15px"
+                android:layout_below="@+id/returnFare_extras"
+                android:layout_centerVertical="true"
+                android:background="@color/sliding_bottom_bg_color"/>
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutPickupWaitTime"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textViewPickupWaitTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8px"
+                android:layout_marginLeft="32px"
+                android:layout_marginTop="24px"
+                android:text="@string/pick_up_wait_time"
+                android:textAllCaps="true"
+                android:textColor="@color/new_orange"
+                android:textSize="40px"/>
+
+
+            <LinearLayout
+                android:id="@+id/pickupWaitTime_extras"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewPickupWaitTime"
+                android:layout_marginBottom="30px"
+                android:layout_marginTop="24px"
+                android:layout_marginLeft="30px"
+                android:layout_marginRight="30px"
+                android:orientation="vertical" />
+
+            <ImageView
+                android:id="@+id/imageViewHorizontal6"
+                android:layout_width="match_parent"
+                android:layout_height="15px"
+                android:layout_centerVertical="true"
+                android:layout_below="@+id/pickupWaitTime_extras"
+                android:background="@color/sliding_bottom_bg_color"/>
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutPickupDistanceFare"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textViewPickupDistanceFare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8px"
+                android:layout_marginLeft="32px"
+                android:layout_marginTop="24px"
+                android:text="@string/pickup_distance_fare"
+                android:textAllCaps="true"
+                android:textColor="@color/new_orange"
+                android:textSize="40px"/>
+
+            <LinearLayout
+                android:id="@+id/pickupDistanceFare_extras"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewPickupDistanceFare"
+                android:layout_marginBottom="30px"
+                android:layout_marginTop="24px"
+                android:layout_marginLeft="30px"
+                android:layout_marginRight="30px"
+                android:orientation="vertical" />
+
+            <ImageView
+                android:id="@+id/imageViewHorizontal7"
+                android:layout_width="match_parent"
+                android:layout_height="15px"
+                android:layout_below="@+id/pickupDistanceFare_extras"
+                android:layout_centerVertical="true"
+                android:background="@color/sliding_bottom_bg_color"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutLoadingFare"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textViewLoadingFare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8px"
+                android:layout_marginLeft="32px"
+                android:layout_marginTop="24px"
+                android:text="@string/loading_fare"
+                android:textAllCaps="true"
+                android:textColor="@color/new_orange"
+                android:textSize="40px"/>
+
+            <LinearLayout
+                android:id="@+id/loadingFare_extras"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewLoadingFare"
+                android:layout_marginBottom="30px"
+                android:layout_marginTop="24px"
+                android:layout_marginLeft="30px"
+                android:layout_marginRight="30px"
+                android:orientation="vertical" />
+
+            <ImageView
+                android:id="@+id/imageViewHorizontal8"
+                android:layout_width="match_parent"
+                android:layout_height="15px"
+                android:layout_below="@+id/loadingFare_extras"
+                android:layout_centerVertical="true"
+                android:background="@color/sliding_bottom_bg_color"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutUnLoadingFare"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/textViewUnLoadingFare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="8px"
+                android:layout_marginLeft="32px"
+                android:layout_marginTop="24px"
+                android:text="@string/un_loading_fare"
+                android:textAllCaps="true"
+                android:textColor="@color/new_orange"
+                android:textSize="40px"/>
+
+            <LinearLayout
+                android:id="@+id/unLoadingFare_extras"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewUnLoadingFare"
+                android:layout_marginBottom="30px"
+                android:layout_marginTop="24px"
+                android:layout_marginLeft="30px"
+                android:layout_marginRight="30px"
+                android:orientation="vertical" />
+
+            <ImageView
+                android:id="@+id/imageViewHorizontal9"
+                android:layout_width="match_parent"
+                android:layout_height="15px"
+                android:layout_below="@+id/unLoadingFare_extras"
+                android:layout_centerVertical="true"
+                android:background="@color/sliding_bottom_bg_color"/>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutFooter"
+            android:layout_width="match_parent"
+            android:layout_height="110px"
+            android:gravity="center"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/textViewReturnfareText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/grey_ticket_history"
+                android:layout_centerHorizontal="true"
+                android:textAllCaps="true"
+                android:gravity="center"
+                android:textSize="28px"
+                android:text="@string/return_fare_aplicable"/>
+
+            <TextView
+                android:id="@+id/textViewReturnFareValue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textViewReturnfareText"
+                android:textColor="@color/grey_ticket_history"
+                android:layout_centerHorizontal="true"
+                android:textSize="28px"
+                android:text="@string/NA"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
     </ScrollView>
-
-    <RelativeLayout
-        android:id="@+id/relativeLayoutFooter"
-        android:layout_width="match_parent"
-        android:layout_height="110px"
-        android:gravity="center"
-        android:background="@color/white"
-        android:layout_alignParentBottom="true">
-
-        <TextView
-            android:id="@+id/textViewReturnfareText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/grey_ticket_history"
-            android:layout_centerHorizontal="true"
-            android:textAllCaps="true"
-            android:gravity="center"
-            android:textSize="28px"
-            android:text="@string/return_fare_aplicable"/>
-
-        <TextView
-            android:id="@+id/textViewReturnFareValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textViewReturnfareText"
-            android:textColor="@color/grey_ticket_history"
-            android:layout_centerHorizontal="true"
-            android:textSize="28px"
-            android:text="@string/NA"/>
-
-    </RelativeLayout>
 
 </RelativeLayout>
