--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_additional_fare_view.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_additional_fare_view.xml
@@ -26,6 +26,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:textColor="@color/grey_ticket_history"
             android:gravity="center"
             android:textSize="24px" />
 
@@ -40,6 +41,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
+            android:textColor="@color/grey_ticket_history"
             android:gravity="center"
             android:textSize="24px" />
 
