--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_single_fare_view.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/item_single_fare_view.xml
@@ -4,36 +4,36 @@
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical">
-    <View
-        android:id="@+id/top_line"
-        android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:background="@color/darker_grey_v2" />
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/main_layout"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="12px"
-        android:orientation="horizontal">
+        android:layout_marginLeft="10px"
+        android:layout_height="40dp">
 
         <TextView
             android:id="@+id/left_text_view"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:layout_marginLeft="6px"
-            android:textColor="@color/grey_dark"
+            android:textColor="@color/grey_ticket_history"
             android:gravity="center_vertical"
             android:text="@string/NA"
             android:textSize="24px" />
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/right_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:layout_weight="1"
+            android:textColor="@color/grey_ticket_history"
+            android:text="@string/NA"
+            android:gravity="center_vertical"
+            android:textSize="24px" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:background="@color/darker_grey_v2" />
+    </RelativeLayout>
+
 
 </LinearLayout>
