--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_delivery_rate_card.xml
@@ -6,15 +6,27 @@
               android:background="@color/sliding_bottom_bg_color"
               android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/textViewNoRCard"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/no_rate_card_available"
+        android:gravity="center"
+        android:textSize="32px"/>
+
+
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="12px">
 
     <LinearLayout
+        android:id="@+id/linearLayoutRCard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:visibility="visible"
         android:background="@color/sliding_bottom_bg_color"
         android:padding="4px">
 
@@ -23,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="visible"
             android:gravity="center">
 
             <TextView
@@ -64,6 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="gone"
             android:gravity="center">
 
             <TextView
@@ -105,6 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="gone"
             android:gravity="center">
 
             <TextView
@@ -146,6 +161,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="gone"
             android:gravity="center">
 
             <TextView
@@ -187,6 +203,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="gone"
             android:gravity="center">
 
             <TextView
@@ -229,6 +246,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="gone"
             android:gravity="center">
 
             <TextView
@@ -269,6 +287,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="gone"
             android:gravity="center">
 
             <TextView
@@ -309,6 +328,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
+            android:visibility="gone"
             android:gravity="center">
 
             <TextView
